// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c0 {
  border: none;
  position: relative;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a close button is present 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c14 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.c8 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c8 + .sub-heading {
  margin-top: -1rem;
}

.c8:last-child {
  margin-bottom: 0;
}

h1.c8 {
  font-size: 3rem;
}

h2.c8 {
  font-size: 2.5rem;
}

h3.c8 {
  font-size: 2rem;
}

h4.c8 {
  font-size: 1.5rem;
}

h5.c8 {
  font-size: 1.25rem;
}

h6.c8 {
  font-size: 1rem;
}

.c8 .c13 {
  top: 0.1em;
}

.c8 {
  font-weight: 600;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1rem;
  position: relative;
  width: 100%;
}

.c7 {
  margin-bottom: 0px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7c81d9 0px 0px 0px 2px;
}

.c10[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c10 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10:hover {
  color: #000;
  fill: #000;
}

.c0 {
  border: none;
  position: relative;
}

.c9 {
  position: absolute;
  right: 0.8rem;
  top: 0.8rem;
  width: 30px;
  height: 30px;
  padding: 0;
  text-align: right;
}

.c9:hover {
  background-color: #f2f2f2;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c12 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

@media (max-width:480px) {
  h1.c8 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c8 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c8 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c8 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c8 {
    font-size: 1.2rem;
  }
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c5 c6 c4"
      >
        <h5
          class="c7 sub-heading c8 c4"
          id="Callout-2"
        >
          Title
        </h5>
      </div>
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
  <button
    class="c9 c10 c11"
    kind="link"
    style="size: default;"
  >
    <div
      class="c12 c4"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c13 c14 c4"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 16 16"
    >
      <path
        d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71L9.41 8z"
        fill-rule="even-odd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly when a footer prop is set 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 1rem;
  width: 100%;
}

.c0 {
  border: none;
  position: relative;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
      <div
        class="c5 c4"
      >
        <div>
          footer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a hasTint prop is set 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c0 {
  border: none;
  position: relative;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a title prop is set 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c8 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c8 + .sub-heading {
  margin-top: -1rem;
}

.c8:last-child {
  margin-bottom: 0;
}

h1.c8 {
  font-size: 3rem;
}

h2.c8 {
  font-size: 2.5rem;
}

h3.c8 {
  font-size: 2rem;
}

h4.c8 {
  font-size: 1.5rem;
}

h5.c8 {
  font-size: 1.25rem;
}

h6.c8 {
  font-size: 1rem;
}

.c8 .c9 {
  top: 0.1em;
}

.c8 {
  font-weight: 600;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1rem;
  position: relative;
  width: 100%;
}

.c7 {
  margin-bottom: 0px;
}

.c0 {
  border: none;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

@media (max-width:480px) {
  h1.c8 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c8 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c8 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c8 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c8 {
    font-size: 1.2rem;
  }
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c5 c6 c4"
      >
        <h5
          class="c7 sub-heading c8 c4"
          id="Callout-2"
        >
          Title
        </h5>
      </div>
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a type prop is set 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c9 {
  fill: #35709e;
  position: relative;
  height: 1em;
  width: 1em;
}

.c6 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c6 + .sub-heading {
  margin-top: -1rem;
}

.c6:last-child {
  margin-bottom: 0;
}

h1.c6 {
  font-size: 3rem;
}

h2.c6 {
  font-size: 2.5rem;
}

h3.c6 {
  font-size: 2rem;
}

h4.c6 {
  font-size: 1.5rem;
}

h5.c6 {
  font-size: 1.25rem;
}

h6.c6 {
  font-size: 1rem;
}

.c6 .c8 {
  top: 0.1em;
}

.c6 {
  font-weight: 600;
}

.c5 {
  margin-bottom: 0px;
}

.c0 {
  border: none;
  position: relative;
}

.c7 {
  margin-right: 1rem;
}

@media (max-width:480px) {
  h1.c6 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c6 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c6 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c6 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c6 {
    font-size: 1.2rem;
  }
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
  type="info"
>
  <div
    class="c3 c4"
  >
    <h5
      class="c5 sub-heading c6 c4"
    >
      <svg
        class="c7 c8 c9 c10"
        color="info"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
          fill-rule="even-odd"
        />
      </svg>
    </h5>
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with a custom element 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c0 {
  border: none;
  position: relative;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        <label>
          Callout
        </label>
      </div>
    </div>
  </div>
</div>
`;
